version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/Interfaces/IReadOnlyDataSeries.rst.txt
.. vale off



:class:`IReadOnlyDataSeries`
============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.Interfaces.IReadOnlyDataSeries

   Bases: :py:obj:`object`



.. py:currentmodule:: IReadOnlyDataSeries

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Count`
            - Gets the number of data points.
          * - :py:attr:`~DataType`
            - Gets the type stored by the data series.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~Name`
            - Gets the name of the data series.
          * - :py:attr:`~QuantityName`
            - Gets the quantity name of the data series, e.g., “Length”, “Pressure”, or “Heat Flux”.
          * - :py:attr:`~Unit`
            - Gets the string representation of the data series units, e.g., “m”, “kg m^-1 s^-2”,
          * - :py:attr:`~Values`
            - Explicitly get the values of the data series.







Property detail
---------------
.. py:property:: Count
   :type: Optional[int]

   
   Gets the number of data points.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataType
   :type: Optional[type]

   
   Gets the type stored by the data series.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Any]

   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]

   
   Gets the name of the data series.
















   ..
       !! processed by numpydoc !!

.. py:property:: QuantityName
   :type: Optional[str]

   
   Gets the quantity name of the data series, e.g., “Length”, “Pressure”, or “Heat Flux”.
















   ..
       !! processed by numpydoc !!

.. py:property:: Unit
   :type: Optional[str]

   
   Gets the string representation of the data series units, e.g., “m”, “kg m^-1 s^-2”,
   or “kg m^2 s^-3”.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[Collection]

   
   Explicitly get the values of the data series.
















   ..
       !! processed by numpydoc !!







.. vale on